# sprint-health-hackathon-t1

./: LICENSE  README.md  работа.ipynb
api/: .env.example  README.md  calculations.py  config.py  main.py  pyproject.toml  requirements.txt
api/analysis/: data-clean-up.ipynb
api/app/: main.py
src/: api.py  data_connection.py  form.html  main.py  page1.py  page_3_data.py
web-ui/: middleware.ts  package-lock.json  package.json
web-ui/app/: layout.tsx  page.tsx
web-ui/app/dashboard/: page.tsx
web-ui/app/register/: page.tsx
web-ui/components/: sprint-charts.tsx
web-ui/components/ui/: separator.tsx  tabs.tsx  tooltip.tsx
