[project]
name = "sprint_stat_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victor Khovanov", email = "victorkhovtko@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.10.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
